--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "react-movie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepages": "https://EooHoSun.github.io/react-memo"
+  "homepages": "https://EooHoSun.github.io/react-movie"
 }
