--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepages": "https://EooHoSun.github.io/react-movie"
+  "homepage": "https://EooHoSun.github.io/react-movie"
 }
